Fix code blocks and list items having overlap if they contain code blocks.

--- a/docs/_template/material/public/main.css
+++ b/docs/_template/material/public/main.css
@@ -184,8 +184,14 @@ code {
 }
 
 /* MAKES PARAMETERS MORE SPACIOUS */
-dl.parameters > dt > code {
-    padding: 3px;
+:not(pre) > code {
+  padding: 3px;
+}
+
+/* MAKES LIST ITEMS BE SLIGHTLY MORE SEPARATED */
+/* THIS AVOIDS CODE BLOCK OVERLAP */
+ul:not(.navbar-nav) > li:not(:last-child) {
+  margin-bottom: 4px;
 }
 
 /* MAKES INHERITANCE LIST READABLE */
